v0.9.2  Pending...

  Changes
  + Clear option clears clipboard and primary contents.

v0.9.1  Wednesday, March 18 2009

  New
  + Several new translations.
  + Print primary contents command line option.
  + Clipboard and primary synchronization (by Wolfgang Schnerring).
  
  Changes
  + Updated translations.
  + Eliminated redundant disk activity.
  + Control-click patch for actions menu.
  + Selected items are bumped to the top of the history.
  + Improved (once again) new clipboard/primary contents handling.
  + Piping clipboard contents no longer truncates new line character.
  + New Edit Clipboard dialog. Old dialog had strange behavior under different window managers.

v0.9   Thursday, November 20 2008

  New
  + Confirm clear option.
  + Parcellite menu hotkey.
  + Translated .desktop files.
  + Hungarian and turkish translation.
  + Support for managing x-selection (primary).
  + Prevent empty clipboard. Clipboard/Primary contents are backed up and recovered
    if they ever become NULL.
  
  Changes
  + Fixed/updated daemon mode.
  + Changed preferences dialog.
  + Changed actions preferences to use GtkTreeView's built in editing mode.
  + Fixed bug with icon showing up in --no-icon mode when you execute an action.
  + Fixed parcellite-startup.desktop to include "Type=Application" to prevent
    desktop-file-validate from failing.

v0.8   Monday, August 11 2008

	New
	+ Daemon mode.
	+ Reverse history option.
	+ Internationalization support.
	+ German, Russian, Italian and Spanish translations.
	+ No-icon option (uses Ctrl-Alt-P for the menu).
	
	Changes
	+ Menu generation and display is quicker.
	+ Selected items also get copied to primary.
	+ History shows newest item first by default.
	+ Performance and overall improvement on action executions.

v0.7  Sunday, March 30 2008

	New
	+ Added man page.
	+ Option to disable/enable saving history.

	Changes
	+ Removed startup option.
	+ Performance improvements.